# djangoapi-guard

./: .mike.yml  .pre-commit-config.yaml  .safety-project.ini  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  versions.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  greetings.yml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/installation/: index.html
1.0.0/release-notes/: index.html
1.0.0/search/: search_index.json
1.0.1/: 404.html  index.html  objects.inv  sitemap.xml
1.0.1/installation/: index.html
1.0.1/release-notes/: index.html
1.0.1/search/: search_index.json
1.0.1/versions/: versions.json
2.1.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.0/installation/: index.html
2.1.0/release-notes/: index.html
2.2.0/: 404.html  index.html  sitemap.xml
4.0.0/: 404.html  index.html  sitemap.xml
djangoapi_guard/: __init__.py  adapters.py  middleware.py
docs/: index.md  installation.md  llms.txt  release-notes.md
examples/advanced/: Dockerfile  README.md  compose.yml  manage.py  pyproject.toml
examples/advanced/advanced_app/: security.py
examples/advanced/advanced_app/routes/: __init__.py  access_control.py  admin.py  advanced.py  auth.py  basic.py  behavioral.py  content.py  headers.py  health.py  rate_limiting.py  testing.py
examples/advanced/advanced_project/: settings.py  urls.py  wsgi.py
examples/advanced/nginx/: nginx.conf
tests/: conftest.py  test_adapters.py  test_middleware.py  test_middleware_lifecycle.py  test_middleware_wiring.py  test_reexports.py
(+269 files in other folders)
